package com.jovisco.tutorial.patterns.factorymethods.assignment;

public interface Animal {
    void walk();
}
